# RedBox

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  content-script.js  package-lock.json  package.json  readme_en.md  readme_es.md  readme_jp.md  readme_ko.md  readme_pt.md  readme_tr.md  readme_tw.md
LexBox/src-tauri/: Cargo.toml  tauri.conf.json
LexBox/src-tauri/capabilities/: default.json
LexBox/src-tauri/icons/: icon.icns
LexBox/src-tauri/resources/: knowledge-api-guide.html  richpost-theme-guide.html
LexBox/src-tauri/src/: README.md  app_shared.README.md  app_shared.rs  assistant_core.README.md  assistant_core.rs  auth.rs  chat_binding.rs  chat_helpers.README.md  chat_helpers.rs  chat_title.rs  desktop_io.README.md  desktop_io.rs  diagnostics.rs  helpers.README.md  helpers.rs  http_utils.README.md  http_utils.rs  interactive_runtime_shared.README.md  interactive_runtime_shared.rs  knowledge.README.md  knowledge.rs  legacy_import.README.md  legacy_import.rs  main.README.md  main.rs  manuscript_package.README.md  manuscript_package.rs  mcp_runtime.README.md  mcp_runtime.rs  media_generation.README.md  media_generation.rs  memory_maintenance.README.md  memory_maintenance.rs  official_support.README.md  official_support.rs  process_utils.rs  redclaw_profile.README.md  redclaw_profile.rs  runtime.README.md  runtime.rs  (+4 more)
LexBox/src-tauri/src/agent/: README.md  bridge.rs  chat.rs  context.rs  context_budget.rs  context_bundle.rs  context_scan.rs  engine.rs  loop.rs  mod.rs  persistence.rs  postprocess.rs  provider.rs  query.rs  session.rs  wander.rs
LexBox/src-tauri/src/commands/: IPC-GUIDE.md  README.md  advisor_ops.rs  assistant_daemon.rs  bridge.rs  chat.rs  chat_runtime.rs  chat_sessions_wander.rs  chat_state.rs  chatrooms.rs  embeddings.rs  file_ops.rs  generation.rs  library.rs  manuscripts.rs  mcp_tools.rs  mod.rs  official.rs  plugin.rs  redclaw.rs  redclaw_runtime.rs  runtime.rs  runtime_orchestration.rs  runtime_query.rs  runtime_routing.rs  runtime_script.rs  runtime_session.rs  runtime_session_ops.rs  runtime_task_ops.rs  runtime_task_resume.rs  runtime_tasks.rs  skills_ai.rs  spaces.rs  subjects.rs  system.rs  wechat_official.rs  (+1 more)
(+787 files in other folders)
