[package]
name = "redbox"
version = "1.9.2"
description = "Rust host for the RedConvert desktop migration"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
arboard = "3.4.1"
base64 = "0.22.1"
dirs = "5.0.1"
glob = "0.3.1"
keyring = "2.3.3"
open = "5.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
shell-words = "1.1.0"
tauri = { version = "2.0.0", features = ["protocol-asset"] }
time = { version = "0.3.36", features = ["formatting", "parsing"] }
url = "2.5.2"
urlencoding = "2.1.3"

[features]
default = []
