[package]
name = "redbox"
version = "1.9.2"
description = "Rust host for the RedConvert desktop migration"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
arboard = "3.4.1"
base64 = "0.22.1"
dirs = "5.0.1"
glob = "0.3.1"
notify = "8.2.0"
open = "5.3.2"
pulldown-cmark = "0.12.2"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10.8"
shell-words = "1.1.0"
tauri = { version = "2.0.0", features = ["protocol-asset"] }
time = { version = "0.3.36", features = ["formatting", "parsing"] }
url = "2.5.2"
urlencoding = "2.1.3"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }

[features]
default = []
